--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,6 @@
-MYSQL_USER=your-user
-MYSQL_PASS=your-password
-MYSQL_URI=your-uri
-MYSQL_DBNAME=your-dbName
-JWT_SECRET=your-jwt-secret
-ENCRYPT_JWT_SECRETE=your-encrypt-secret
-JWT_EXPIRATION=your-expiration-role
+DB_NAME=library-api
+DB_USER={user}
+DB_PASSWORD={Password}
+DB_HOST=172.17.0.2
+DB_PORT=3306
+
