fix:o banco e a api rodando no docker porem ajustar a rota [user] pois tive que tirar o jwt

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,23 +1,36 @@
+version: '3.8'
+
 services:
-  node-server:
-    build: .
-    container_name: library-api
-    entrypoint: ./.docker/entrypoint.sh
-    volumes:
-      - .:/home/node/api
-      - /home/node/api/node_module
-    ports:
-      - '3000:3000'
-    depends_on:
-      - api-library
-  database:
-    container_name: api-library
-    build: ./.docker/mysql
+  mysql:
+    image: mysql:8.0
+    container_name: mysql_container
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: root         # Configura a senha do root
+      MYSQL_DATABASE: library_api       # Nome do banco de dados principal
     ports:
       - "3306:3306"
     volumes:
-      - ./.docker/dbdata:/var/lib/mysql
-      - ./.docker/mysql:/docker-entrypoint-initdb.d
+      - mysql_data:/var/lib/mysql
+
+  node_app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: node_container
+    restart: always
+    ports:
+      - "3000:3000"
+    depends_on:
+      - mysql
+    env_file:
+      - .env
     environment:
-      - MYSQL_DATABASE=library_api
-      - MYSQL_ROOT_PASSWORD=root
+      DB_HOST: mysql                    # O nome do serviço do MySQL
+      DB_PORT: 3306                     # Porta padrão do MySQL
+      DB_USER: root                     # Usuário root
+      DB_PASSWORD: root                 # Senha do root
+      DB_DATABASE: library_api          # Nome do banco de dados principal
+
+volumes:
+  mysql_data:
